applications/openeuler-jenkins-master-cn4-new/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins-master
  name: jenkins-master
