applications/openeuler-jenkins-master-cn4-new/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - args:
        - --argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)
        - --argumentsRealm.roles.$(ADMIN_USER)=admin
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/jenkins:lts20221012-2.361.2jdk11
        imagePullPolicy: Always
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: slavelistener
        resources:
          limits:
            cpu: 40000m
            memory: 60000Mi
          requests:
            cpu: 20000m
            memory: 40000Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/jenkins_home_backup
          name: jenkins-home
          readOnly: false
        - mountPath: /var/jenkins_home
          name: jenkins-home-new
          readOnly: false
        - mountPath: /var/jenkins_config
          name: jenkins-config
          readOnly: true
        - mountPath: /usr/share/jenkins/ref/secrets/
          name: secrets-dir
          readOnly: false
        - mountPath: /usr/share/jenkins/ref/plugins/
          name: plugin-dir
          readOnly: false
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        jenkins.master.x86: "true"
      securityContext:
        runAsUser: 0
      serviceAccountName: jenkins
      volumes:
      - emptyDir: {}
        name: plugins
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: secrets-dir
      - emptyDir: {}
        name: plugin-dir
      - configMap:
          name: jenkins
        name: jenkins-config
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-data
      - name: jenkins-home-new
        persistentVolumeClaim:
          claimName: jenkins-home-data
