applications/openeuler-jenkins-master-cn4-new/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: jenkins-master
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: slavelistener
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
  type: NodePort
