applications/openeuler-jenkins-master-cn4-new/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-ingress
  namespace: jenkins-master
spec:
  rules:
  - host: openeulerjenkins.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /
  tls:
  - hosts:
    - openeulerjenkins.test.osinfra.cn
    secretName: jenkins-tls
